--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 
-theme: jekyll-theme-minima
+remote_theme: pages-themes/dinky@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
+title: Linux Training
+description: Linux Essentials (level 1) Linux-ի Հիմունքներ (փուլ 1)
